--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.0",
+    "react-native": "^0.64.0",
     "react-native-dropdown-picker": "^4.0.9",
     "react-native-table-component": "^1.2.1",
     "react-quantity-dropdown": "^1.0.1"
